--- a/.github/workflows/arma.yml
+++ b/.github/workflows/arma.yml
@@ -15,10 +15,14 @@ jobs:
         uses: arma-actions/hemtt@v1
 
       - name: Build Mod
-        run: hemtt release
+        run: hemtt build
+
+      - name: Rename build folder
+        run: mv .hemttout/build .hemttout/@synixe_armoury
 
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: synixe_armoury.zip
-          path: releases/tacgt-latest.zip
+          path: .hemttout/@*
+          include-hidden-files: true
